src/OpenCvSharpExtern/core_Mat.h

CVAPI(ExceptionStatus) core_Mat_operatorUnaryMinus(cv::Mat *mat, cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = -(*mat);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorAdd_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) + (*b);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorAdd_MatScalar(
    cv::Mat *a,
    interop::Scalar s,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) + cpp(s);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorAdd_ScalarMat(
    interop::Scalar s,
    cv::Mat *a,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = cpp(s) + (*a); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorMinus_Mat(cv::Mat *a, cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = -(*a);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorSubtract_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) - (*b);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorSubtract_MatScalar(
    cv::Mat *a,
    interop::Scalar s,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) - cpp(s);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorSubtract_ScalarMat(
    interop::Scalar s,
    cv::Mat *a,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = cpp(s) - (*a); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorMultiply_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) * (*b);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorMultiply_MatDouble(
    cv::Mat *a,
    double s,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) * s;
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorMultiply_DoubleMat(
    double s,
    cv::Mat *a,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = s * (*a); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorDivide_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) / (*b);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorDivide_MatDouble(
    cv::Mat *a,
    double s,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) / s;
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorDivide_DoubleMat(
    double s,
    cv::Mat *a,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = s / (*a); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorAnd_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) & (*b);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorAnd_MatDouble(
    cv::Mat *a,
    double s,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) & s;
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorAnd_DoubleMat(
    double s,
    cv::Mat *a,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = s & (*a); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorOr_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) | (*b);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorOr_MatDouble(
    cv::Mat *a,
    double s,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) | s;
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorOr_DoubleMat(
    double s,
    cv::Mat *a,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = s | (*a); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorXor_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) ^ (*b);
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorXor_MatDouble(
    cv::Mat *a,
    double s,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) ^ s;
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorXor_DoubleMat(
    double s,
    cv::Mat *a,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = s ^ (*a); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorNot(cv::Mat *a, cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = ~(*a);
    *returnValue = new cv::MatExpr(expr);
    });
}
// Comparison Operators

// <
CVAPI(ExceptionStatus) core_Mat_operatorLT_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) < (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorLT_DoubleMat(
    double a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = a < (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorLT_MatDouble(
    cv::Mat *a,
    double b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) < b; 
    *returnValue = new cv::MatExpr(expr);
    });
}
// <=
CVAPI(ExceptionStatus) core_Mat_operatorLE_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) <= (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorLE_DoubleMat(
    double a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = a <= (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorLE_MatDouble(
    cv::Mat *a,
    double b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) <= b; 
    *returnValue = new cv::MatExpr(expr);
    });
}
// >
CVAPI(ExceptionStatus) core_Mat_operatorGT_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) > (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorGT_DoubleMat(
    double a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = a > (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorGT_MatDouble(
    cv::Mat *a,
    double b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) > b; 
    *returnValue = new cv::MatExpr(expr);
    });
}
// >=
CVAPI(ExceptionStatus) core_Mat_operatorGE_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) >= (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorGE_DoubleMat(
    double a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = a >= (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorGE_MatDouble(
    cv::Mat *a,
    double b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) >= b; 
    *returnValue = new cv::MatExpr(expr);
    });
}
// ==
CVAPI(ExceptionStatus) core_Mat_operatorEQ_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) == (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorEQ_DoubleMat(
    double a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = a == (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorEQ_MatDouble(
    cv::Mat *a,
    double b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) == b; 
    *returnValue = new cv::MatExpr(expr);
    });
}
// !=
CVAPI(ExceptionStatus) core_Mat_operatorNE_MatMat(
    cv::Mat *a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) != (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorNE_DoubleMat(
    double a,
    cv::Mat *b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = a != (*b); 
    *returnValue = new cv::MatExpr(expr);
    });
}
CVAPI(ExceptionStatus) core_Mat_operatorNE_MatDouble(
    cv::Mat *a,
    double b,
    cv::MatExpr **returnValue)
{
    return cvTry([&] {
    const auto expr = (*a) != b; 
    *returnValue = new cv::MatExpr(expr);
    });
}